POST+CSS+tweaks

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,10 @@
-<p>This is the about view.</p>
+<p>This App is the user interface for the RPI Course Wizard prototype</p>
+<p>Team Blue</p>
+<ul>
+  <li>Ahmed Eleish</li>
+  <li>Antwane Mason</li>
+  <li>Charles Hathaway</li>
+  <li>Jamie Fujimoto</li>
+  <li>Katherine McGuire</li>
+</ul>
+<p>XInformatics Spring 2015</p>
