--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <modal title="Loginform" class="login" ng-show="!currentUser" visible="showModal" ng-controller="LoginController" ng-submit="login(credentials)" novalidate>
       <form role="form" class="LoginForm">
 	<div class="form-group">
@@ -12,18 +12,8 @@
 	<button type="submit" class="btn btn-default">Login</button>
       </form>
     </modal>
-    <div id="calendar-container" ng-show="currentUser" >
-      <form role="form" class="ControlsForm" ng-submit="addRemoveEventSource(eventSources,classes)">
-	<div class="form-group">
-	  <fieldset>
-	  <label for="major">Select your major</label>
-	  <select name="major" id="major" class="major" ng-model="major">
-	    <option>Computer Science</option>
-	  </select>
-	  <input type="submit" id="run" value="Run"/>
-	</fieldset>
-      </form>
-      <div ui-calendar="uiConfig.calendar" ng-model="eventSources" calendar="myCalendar" class="calendar"></div>
+    <div ng-show="currentUser">
+      <p>Transcript</p>
+      <li><a ng-href="#/schedule">Schedule</a></li>
     </div>
-  </div>
 </div>
