--- a/app/views/schedule.html
+++ b/app/views/schedule.html
@@ -1,11 +1,8 @@
 <div class="container-fluid">
-    <div class="calendar-container" ng-show="currentUser" >
-      <form role="form" class="ControlsForm" ng-submit="addRemoveEventSource(eventSources,classes)">
-	<div class="form-group">
-	  <fieldset>
-	  <input type="submit" id="run" value="Run"/>
-	</fieldset>
-      </form>
+    <div class="loading" ng-show="loading">
+    </div>
+    <div class="calendar-container" ng-show="currentUser && !loading" >
+      <input ng-repeat="(semester, date) in semesters" class="btn btn-primary" ng-click="goToDate(date)" value="{{ semester }}" type="button"></input>
       <div ui-calendar="uiConfig.calendar" ng-model="eventSources" calendar="myCalendar" class="calendar"></div>
     </div>
   </div>
