--- a/app/views/main.html
+++ b/app/views/main.html
@@ -13,9 +13,16 @@
       </form>
     </modal>
     <div ng-show="currentUser">
-      <p>Name: 	{{studentName}}</p>
-      <p>Rin: 	{{studentRin}}</p>
-      <p>Major: {{studentMajor}}</p>
-      <a ng-href="#/schedule">Schedule</a>
+      <ul class="student-info">
+	<li><label>Name: </label><input ng-model="studentName" type="text" name="name" disabled/></li>
+	<li><label>Rin: </label><input ng-model="studentRin" type="text" name="name" disabled/></li>
+	<li><label>Major: </label><input ng-model="studentMajor" type="text" name="name" disabled/></li>
+	<li><label>Courses: </label></li>
+	<li>
+	  <ul class="student-courses" ng-model="studentCourses">
+	    <li ng-repeat="course in studentCourses">{{course.name}}</li>
+	  </ul>
+	</li>
+      </ul>
     </div>
 </div>
