--- a/app/views/schedule.html
+++ b/app/views/schedule.html
@@ -1,9 +1,17 @@
 <div class="container-fluid">
     <div class="calendar-container" ng-show="currentUser" >
-      <form role="form" class="ControlsForm" ng-submit="addRemoveEventSource(eventSources,classes)">
+      <form role="form" class="ControlsForm" ng-submit="updateEvents(eventSources,classes,semesterChoice)">
 	<div class="form-group">
 	  <fieldset>
-	  <input type="submit" id="run" value="Run"/>
+	  <input type="submit" id="scheduleCoursesBtn" value="Schedule Courses"/>
+	</fieldset>
+	<fieldset>
+	  <label for="semester">Semester</label>
+	  <select name="semester" ng-model="semesterChoice" id="select-semester">
+	    <option>Fall 2014</option>
+	    <option>Spring 2015</option>
+	  </select>
+	  <input type="submit" id="go" ng-click="goToSemester(semesterChoice)" value="Change Semester"/>
 	</fieldset>
       </form>
       <div ui-calendar="uiConfig.calendar" ng-model="eventSources" calendar="myCalendar" class="calendar"></div>
